--- a/YIPSC/src/main/java/com/yavuz/yipsc/gui/MainUI.form
+++ b/YIPSC/src/main/java/com/yavuz/yipsc/gui/MainUI.form
@@ -16,7 +16,6 @@
     <Property name="modalExclusionType" type="java.awt.Dialog$ModalExclusionType" editor="org.netbeans.modules.form.editors.EnumEditor">
       <Value id="APPLICATION_EXCLUDE"/>
     </Property>
-    <Property name="name" type="java.lang.String" value="frame0" noResource="true"/>
     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
       <Dimension value="[1000, 800]"/>
     </Property>
@@ -68,14 +67,16 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Group type="102" alignment="3" attributes="0">
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="14" pref="14" max="-2" attributes="0"/>
                       <Component id="explanationLabel" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <Component id="uploadCodeBtn" alignment="3" max="32767" attributes="0"/>
-                  <Component id="verifyCodeBtn" alignment="3" max="32767" attributes="0"/>
-                  <Component id="compileCodeBtn" alignment="3" max="32767" attributes="0"/>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="uploadCodeBtn" alignment="3" max="32767" attributes="0"/>
+                      <Component id="verifyCodeBtn" alignment="3" max="32767" attributes="0"/>
+                      <Component id="compileCodeBtn" alignment="3" max="32767" attributes="0"/>
+                  </Group>
               </Group>
               <EmptySpace min="-2" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
@@ -163,6 +164,9 @@
         <Property name="text" type="java.lang.String" value="Compile!"/>
         <Property name="actionCommand" type="java.lang.String" value="Compile"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="compileCodeBtnActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="infoLabel">
       <Properties>
